--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import 'keen-slider/keen-slider.min.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -84,3 +86,8 @@ em {
   background-color: rgba(0, 0, 0, 0.1);
   margin: 3rem 0;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
