--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,11 +62,32 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+/* Глобальные стили для контейнера */
 .container {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1400px; /* Увеличиваем максимальную ширину для больших экранов */
   margin: 0 auto;
 }
+
+/* Для экрана 1920px */
+@media (min-width: 1920px) {
+  .container {
+    max-width: 1600px; /* Ширина контейнера будет еще больше на очень больших экранах */
+  }
+}
+
+@media (min-width: 2220px) {
+  .container {
+    max-width: 1800px; /* Ширина контейнера будет еще больше на очень больших экранах */
+  }
+}
+
+@media (min-width: 2520px) {
+  .container {
+    max-width: 1900px; /* Ширина контейнера будет еще больше на очень больших экранах */
+  }
+}
+
 
 em {
   font-style: italic;
